@@ -1,5 +1,11 @@
 2009-04-05  Stefan Kost  <ensonic@users.sf.net>
 
+	* Ensonic/CallbackTester/Makefile.am:
+	* Matilde/Tracker/Makefile.am:
+	  Link against dsplib. Fixes #2724592
+
+2009-04-05  Stefan Kost  <ensonic@users.sf.net>
+
 	* Matilde/Tracker/Envelope.h:
 	* Matilde/Tracker/SurfsDSPLib/SRF_Amp.cpp:
 	* Matilde/Tracker/SurfsDSPLib/SRF_Resampler.cpp:
